# dcm

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.ko.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  knowledge.md  persona.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: README.ko.md  README.md  dcm.service
docs/: server-templates.ko.md  server-templates.md
examples/: server-template-minimal.yaml  server-template.json  server-template.yaml
src/dcm/: __init__.py  commands.py  config.py  embeddings.py  llm.py  main.py  (+3 more)
tests/: test_adapter.py  test_admin_commands.py  test_announcements.py  test_anti_fatigue.py  test_authz.py  test_channel_commands.py  test_cleanup.py  test_config.py  test_copywriter.py  test_deploy.py  test_forgetting.py  test_guards.py  test_guild_admin_service.py  test_guild_settings.py  test_i18n.py  test_leveling_adversarial.py  test_leveling_commands.py  test_leveling_decay.py  test_leveling_decay_p2_redteam.py  test_leveling_decay_redteam.py  test_leveling_e2e.py  test_leveling_g002_adversarial.py  test_leveling_g003_adversarial.py  test_leveling_g004.py  test_leveling_g004_adversarial.py  test_leveling_scoring.py  test_leveling_store.py  test_memory.py  test_memory_isolation.py  test_migration.py  test_moderation.py  test_onboarding.py  test_project_command.py  test_role_commands.py  test_router.py  test_sql_injection.py  test_study_lookup.py  test_template.py  test_web_isolation.py
(+47 files in other folders)
