[project]
name = "dcm"
version = "0.1.0"
description = "Discord Community Manager (dcm) — a 24/7 community-management bot that converses through a configurable persona (default 지우/Jiwoo), remembering and forgetting like a person"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6",
    "anthropic>=0.39",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
dcm = "dcm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcm"]
